--- a/src/pages/detail/detail.module.css
+++ b/src/pages/detail/detail.module.css
@@ -5,20 +5,46 @@
     justify-content: center;
     align-items: center;
     width: 100%;
-    border: solid 0.5px white;
+    border: dashed 0.5px #308aff;
     border-radius: 6px;
     height: 500px;
     gap: 10px;
     background-color: #1d1c20;
     margin: auto;
-    color: #ffff;
-    transition: 1.2s all;
+    color: #fff;
+    transition: 1s all;
 }
 
-.container:hover {
-    background-color: #b8b8b8;
-    color: #000000;
+.cspiner {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    margin: 160px auto;
+
 }
+
+.spiner {
+    width: 48px;
+    height: 48px;
+    border: 5px solid #FFF;
+    border-bottom-color: transparent;
+    border-radius: 50%;
+    display: inline-block;
+    box-sizing: border-box;
+    animation: rotation 1s linear infinite;
+}
+
+@keyframes rotation {
+    0% {
+        transform: rotate(0deg);
+    }
+
+    100% {
+        transform: rotate(360deg);
+    }
+}
+
+
 
 @-webkit-keyframes container {
     0% {
@@ -68,15 +94,11 @@
 }
 
 .container:hover>.logo {
-    background-color: #000000;
+    background-color: #308aff;
 }
 
 strong {
     color: #fff;
-}
-
-.container:hover strong {
-    color: #000000;
 }
 
 .winer {
