--- a/src/index.css
+++ b/src/index.css
@@ -4,12 +4,17 @@
   box-sizing: border-box;
 }
 
+html {
+  overflow-x: none;
+}
+
 body {
   background-color: #18171c;
   width: 100%;
   margin: 0 auto;
   font-family: sans-serif;
   font-size: 16px;
+  overflow-x: hidden;
 
 }
 
